--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
-/nbproject/
+# OS Files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# IDE and Editor Files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.settings/
+.buildpath
+.aider*
+
+# Dependencies
+vendor/
+node_modules/
+composer.lock
+package-lock.json
+
+# Build and distribution files
+dist/
+*.zip
+
+# Log files
+*.log
+
+# Temporary files
+tmp/
+temp/
+cache/
+themes/
+
+# Test and cache files
+.phpunit.result.cache
+.phpunit.cache/
+.php-cs-fixer.cache
+
+# Environment files
+.env
+.env.local
+
+# Docker override files (user customizations or CI generated)
+docker-compose.override.yml
+
+# FacturaScripts core (reference only)
+facturascripts/
