--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,4 +1,5 @@
-version = 6
-version_url = 'https://raw.githubusercontent.com/FacturaScripts/modelos_420_425_canarias/master/facturascripts.ini'
-update_url = 'https://github.com/FacturaScripts/modelos_420_425_canarias/archive/master.zip'
-require = 'facturacion_base'
+name = 'Modelos420_425_Canarias'
+description = 'Modelos 420 y 425 de la Agencia Tributaria Canaria para la declaración trimestral y anual del IGIC (Impuesto General Indirecto Canario)'
+version = 1
+min_version = 2025
+min_php = 8.2
