--- a/.gitattributes
+++ b/.gitattributes
@@ -26,6 +26,7 @@
 /composer.lock          export-ignore
 
 # Development tools
+/biome.json             export-ignore
 /docker-compose.yml     export-ignore
 /Makefile               export-ignore
 /phpunit.xml            export-ignore
@@ -34,3 +35,6 @@
 /phpcs.xml              export-ignore
 /.php-cs-fixer.php      export-ignore
 /.php-cs-fixer.cache    export-ignore
+
+# Translation utilities
+/Translation/updater.php export-ignore
