--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
       - facturascripts_data:/var/www/html/volume
       # Mount the plugin directory
       - ./:/var/www/html/Plugins/Modelos420_425_Canarias
+      # Mount test fixtures for PHPUnit tests
+      - ./Test/fixtures:/var/www/html/Test/fixtures
     depends_on:
       mariadb:
         condition: service_healthy
